sass/_window.scss
.window {
	position: absolute;
	border-radius: 3px;
	resize: both;
	border-top: $dragbar-width solid $black;
	background: white;
	overflow: hidden;
//	animation: windowIn 500ms ease;
	box-shadow: -10px 10px 0 0 rgba(black, .2);
	&.closed {
		opacity: .7;
//		transition: 300ms;
		transform: scale(0);
		pointer-events: none;
	}
}

.window-1 {
	left: 2rem;
	top: 300px;
    left:650;
	background: $blue;
	width: 440px;
	height: 300px;

}

.window-2 {
	left: 500px;
	top: 100px;
	width: 540px;
	height:350px;
	background-color: $green;
	background-image: url("../assets/wave.svg");
//	animation: waveBackground 60s linear infinite;
}

.window-countdown {
	left: 600px;
	top: 400px;
	width: 550px;
	height:150px;
	background: white;	
}

.window-content {
	max-height: calc(100% - 20px);
	overflow-y: auto;
	padding: 1rem;
	margin-right: $dragbar-width;
	margin-bottom: $dragbar-width;
	h1 {
		font-size: 4rem;
	}
}

.window-header {
	background: white;
	min-height: 20px;
	padding: 5px 10px;
	display: flex;
	justify-content: space-between;
	border-bottom: $dragbar-width solid $black;
	width: 100%;
	cursor: grab;
	.is-pointer-down & {
		cursor: grabbing;
	}
	&:hover, &:focus {
		background: darken(white, 10)
	}
}

.window-title {
	font-size: .9rem;
	font-weight: 600;
	
}

[class*=window-control]{
	display: inline-block;
	height: 100%;
	line-height: 0;
	cursor: pointer;
	svg {
		position: relative;
		top: -2px;
		height: 20px;
		width: 20px;
	}
	
}

[class*=dragbar] {
	position: absolute;
	background: $black;
}
.dragbar-right {
	right: 0;
	top: 0;
	width: $dragbar-width;
	height: 100%;
	cursor: ew-resize;
}
.dragbar-bottom {
	bottom: 0;
	left: 0;
	height: $dragbar-width;
	width: 100%;
	cursor: ns-resize;
}
.dragbar-left {
	bottom: 0;
	left: 0;
	width: $dragbar-width;
	height: 100%;
	cursor: ew-resize;
}

